@@ -7465,51 +7465,6 @@ bool MainWorker::SetRFXCOMHardwaremodes(const int HardwareID, const unsigned cha
 	return true;
 }
 
-bool MainWorker::HandleSwitchAction(const bool bIsOn, const std::string &OnAction, const std::string &OffAction)
-{
-	if (bIsOn)
-	{
-		if (OnAction.find("http://")!=std::string::npos)
-		{
-			_tTaskItem tItem;
-			tItem=_tTaskItem::GetHTTPPage(1,OnAction,"SwitchActionOn");
-			m_sql.AddTaskItem(tItem);
-		}
-		else if (OnAction.find("script://")!=std::string::npos)
-		{
-			//Execute possible script
-			std::string scriptname=OnAction.substr(9);
-			if (file_exist(scriptname.c_str()))
-			{
-				//Add parameters
-				std::string scriptparams="";
-				m_sql.AddTaskItem(_tTaskItem::ExecuteScript(1,scriptname,scriptparams));
-			}
-		}
-	}
-	else
-	{
-		if (OffAction.find("http://")!=std::string::npos)
-		{
-			_tTaskItem tItem;
-			tItem=_tTaskItem::GetHTTPPage(1,OffAction,"SwitchActionOff");
-			m_sql.AddTaskItem(tItem);
-		}
-		else if (OffAction.find("script://")!=std::string::npos)
-		{
-			//Execute possible script
-			std::string scriptname=OffAction.substr(9);
-			if (file_exist(scriptname.c_str()))
-			{
-				//Add parameters
-				std::string scriptparams="";
-				m_sql.AddTaskItem(_tTaskItem::ExecuteScript(1,scriptname,scriptparams));
-			}
-		}
-	}
-	return true;
-}
-
 bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string switchcmd, int level, int hue, const bool IsTesting)
 {
 	unsigned long ID;
@@ -7520,9 +7475,6 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 	unsigned char ID2=(unsigned char)((ID&0x00FF0000)>>16);
 	unsigned char ID3=(unsigned char)((ID&0x0000FF00)>>8);
 	unsigned char ID4=(unsigned char)((ID&0x000000FF));
-
-	std::string OnAction=sd[6];
-	std::string OffAction=sd[7];
 
 	int HardwareID = atoi(sd[0].c_str());
 
@@ -7541,7 +7493,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 			else
 				return false;
 			UpdateDomoticzSecurityStatus(iSecStatus);
-			return HandleSwitchAction((switchcmd!="Disarm"),OnAction,OffAction);
+			return true;
 		}
 	}
 
@@ -7598,7 +7550,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeLighting2:
@@ -7644,7 +7596,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeLighting3:
@@ -7753,7 +7705,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeLighting6:
@@ -7779,7 +7731,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeLimitlessLights:
@@ -7825,7 +7777,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeSecurity1:
@@ -7870,7 +7822,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				}
 				break;
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeBlinds:
@@ -7894,7 +7846,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeChime:
@@ -7915,7 +7867,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	case pTypeThermostat3:
@@ -7938,7 +7890,7 @@ bool MainWorker::SwitchLightInt(const std::vector<std::string> &sd, std::string 
 				//send to internal for now (later we use the ACK)
 				DecodeRXMessage(m_hardwaredevices[hindex],(const unsigned char *)&lcmd);
 			}
-			return HandleSwitchAction(bIsLightSwitchOn,OnAction,OffAction);
+			return true;
 		}
 		break;
 	}
@@ -7950,7 +7902,7 @@ bool MainWorker::SwitchLight(unsigned long long idx, const std::string &switchcm
 	//Get Device details
 	std::vector<std::vector<std::string> > result;
 	std::stringstream szQuery;
-	szQuery << "SELECT HardwareID, DeviceID,Unit,Type,SubType,SwitchType, StrParam1, StrParam2 FROM DeviceStatus WHERE (ID == " << idx << ")";
+	szQuery << "SELECT HardwareID, DeviceID,Unit,Type,SubType,SwitchType FROM DeviceStatus WHERE (ID == " << idx << ")";
 	result=m_sql.query(szQuery.str());
 	if (result.size()<1)
 		return false;
@@ -8139,7 +8091,7 @@ bool MainWorker::SwitchScene(const unsigned long long idx, const std::string &sw
 		int hue=atoi(sd[3].c_str());
 		std::vector<std::vector<std::string> > result2;
 		std::stringstream szQuery2;
-		szQuery2 << "SELECT HardwareID, DeviceID,Unit,Type,SubType,SwitchType, nValue, sValue, StrParam1, StrParam2, Name FROM DeviceStatus WHERE (ID == " << sd[0] << ")";
+		szQuery2 << "SELECT HardwareID, DeviceID,Unit,Type,SubType,SwitchType, nValue, sValue, Name FROM DeviceStatus WHERE (ID == " << sd[0] << ")";
 		result2=m_sql.query(szQuery2.str());
 		if (result2.size()>0)
 		{
@@ -8155,7 +8107,7 @@ bool MainWorker::SwitchScene(const unsigned long long idx, const std::string &sw
 			int hwID=atoi(sd2[0].c_str());
 			if (DoesDeviceActiveAScene(hwID,sd2[1],Unit,dType,dSubType))
 			{
-				_log.Log(LOG_ERROR,"Skipping sensor '%s' because this triggers another scene!",sd2[10].c_str());
+				_log.Log(LOG_ERROR,"Skipping sensor '%s' because this triggers another scene!",sd2[8].c_str());
 				continue;
 			}
 
